# jedi_wrfhydro_workflow

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.org  jedi_workflow.py  jedi_workflow_LETKFOI_SNOWH.yaml  jedi_workflow_LETKFOI_SWE.yaml  letkf_oi_09253000_workflow_SNOWH.yaml  letkf_oi_09253000_workflow_SWE.yaml  workflow_pseudo.md
.github/: PULL_REQUEST_TEMPLATE.md
bundle/: CMakeLists.txt
docs/: YAML_files.md  expirement_setup.md  jedi_workflow_yaml.md
docs/notebooks/: 01_Visualize_Domain_n_SNOTEL_observations_09253000.ipynb  02_Visualize_increments_SWE_Testcase09253000.ipynb  03_Visualize_oman_ombg_SWE_Testcase09253000.ipynb  README.md  Visualize_RESTART_files.ipynb
examples/: gnu_spack_env.sh  jedi_workflow.yaml  jedi_workflow_colorado.yaml  letkf_oi_workflow_example.yaml  sub_script_example.sh
jedi_workflow_testdata/: README.md  jedi_workflow_LETKFOI_SWE.yaml
jedi_workflow_testdata/.ipynb_checkpoints/: Visualize_increments_SWE-checkpoint.ipynb  how_to_run_example-checkpoint.txt  jedi_workflow_LETKFOI_2-checkpoint.yaml  jedi_workflow_LETKFOI_SNOWH-checkpoint.yaml  jedi_workflow_LETKFOI_SWE-checkpoint.yaml  jedi_workflowpy-checkpoint.py  letkf_oi_colorado_workflow_2-checkpoint.yaml  letkf_oi_colorado_workflow_SWE-checkpoint.yaml  letkf_oi_colorado_workflow_swe-checkpoint.yaml
jedi_workflow_testdata/site_09253000/.ipynb_checkpoints/: Subset_OWP_obs-checkpoint.ipynb  subset_restart_files-checkpoint.R
jedi_workflow_testdata/site_09253000/Domain/: Fulldom_hires.nc  GEOGRID_LDASOUT_Spatial_Metadata.nc  Route_Link.nc  geo_em.d0x.nc  geometry_nwm_long_range.nc  soil_properties.nc  spatialweights.nc
jedi_workflow_testdata/site_09253000/Domain/FORCING/: 202103010100.LDASIN_DOMAIN1  202103010300.LDASIN_DOMAIN1  202103010700.LDASIN_DOMAIN1  202103010800.LDASIN_DOMAIN1  202103010900.LDASIN_DOMAIN1  202103011100.LDASIN_DOMAIN1  202103011500.LDASIN_DOMAIN1  202103011600.LDASIN_DOMAIN1  202103011700.LDASIN_DOMAIN1  202103011800.LDASIN_DOMAIN1  202103012100.LDASIN_DOMAIN1  202103012200.LDASIN_DOMAIN1  202103020000.LDASIN_DOMAIN1  202103020200.LDASIN_DOMAIN1  202103020300.LDASIN_DOMAIN1  202103020400.LDASIN_DOMAIN1  202103020700.LDASIN_DOMAIN1  202103021000.LDASIN_DOMAIN1  202103021100.LDASIN_DOMAIN1  202103021200.LDASIN_DOMAIN1  202103021300.LDASIN_DOMAIN1  202103021600.LDASIN_DOMAIN1  202103021700.LDASIN_DOMAIN1  202103021800.LDASIN_DOMAIN1  202103021900.LDASIN_DOMAIN1  202103022300.LDASIN_DOMAIN1  202103030000.LDASIN_DOMAIN1  (+79 more)
jedi_workflow_testdata/site_09253000/Restart/: HYDRO_RST.2021-03-01_00:00_DOMAIN1  RESTART.2021030100_DOMAIN1
jedi_workflow_testdata/site_09253000/SNOTEL_obs/: owp_depth_2021-03-01T00:00:00Z.nc  owp_depth_2021-03-02T00:00:00Z.nc  owp_depth_2021-03-04T00:00:00Z.nc  owp_depth_2021-03-05T00:00:00Z.nc  owp_depth_2021-03-06T00:00:00Z.nc  owp_swe_2021-03-01T00:00:00Z.nc  owp_swe_2021-03-02T00:00:00Z.nc  owp_swe_2021-03-05T00:00:00Z.nc  owp_swe_2021-03-08T00:00:00Z.nc
jedi_workflow_testdata/site_09253000/json_files/: hrldas_namelist_patches.json
jedi_workflowpy/: jedi_workflowpy.py  workflowFile.py  workflowTime.py
notebooks/: Compare_RESTART_files.py  Visualize_RESTART_files.ipynb
site_09253000/Domain/: Fulldom_hires.nc  GEOGRID_LDASOUT_Spatial_Metadata.nc  GWBUCKPARM.nc  Route_Link.nc  geo_em.d0x.nc  hydro2dtbl.nc  soil_properties.nc  spatialweights.nc  wrfinput_d0x.nc
site_09253000/Domain/.ipynb_checkpoints/: script_forcing_subset-checkpoint.txt
site_09253000/Domain/FORCING/: 202103010000.LDASIN_DOMAIN1  202103010200.LDASIN_DOMAIN1  202103010400.LDASIN_DOMAIN1  202103010500.LDASIN_DOMAIN1  202103010600.LDASIN_DOMAIN1  202103011000.LDASIN_DOMAIN1  202103011200.LDASIN_DOMAIN1  202103011300.LDASIN_DOMAIN1  202103011400.LDASIN_DOMAIN1  202103011900.LDASIN_DOMAIN1  202103012000.LDASIN_DOMAIN1  202103012300.LDASIN_DOMAIN1  202103020100.LDASIN_DOMAIN1  202103020500.LDASIN_DOMAIN1  202103020600.LDASIN_DOMAIN1  202103020800.LDASIN_DOMAIN1  202103020900.LDASIN_DOMAIN1  202103021400.LDASIN_DOMAIN1  202103021500.LDASIN_DOMAIN1  202103022000.LDASIN_DOMAIN1  202103022100.LDASIN_DOMAIN1  202103022200.LDASIN_DOMAIN1  202103030100.LDASIN_DOMAIN1  202103030300.LDASIN_DOMAIN1  202103030400.LDASIN_DOMAIN1  202103030600.LDASIN_DOMAIN1  202103030700.LDASIN_DOMAIN1  202103031000.LDASIN_DOMAIN1  202103031200.LDASIN_DOMAIN1  202103031300.LDASIN_DOMAIN1  202103031400.LDASIN_DOMAIN1  202103031500.LDASIN_DOMAIN1  202103031600.LDASIN_DOMAIN1  202103031900.LDASIN_DOMAIN1  202103032200.LDASIN_DOMAIN1  202103040000.LDASIN_DOMAIN1  202103040400.LDASIN_DOMAIN1  202103040500.LDASIN_DOMAIN1  202103040700.LDASIN_DOMAIN1  202103040800.LDASIN_DOMAIN1  (+70 more)
site_09253000/Domain/basin_boundary/: USGS_09253000.dbf  USGS_09253000.qmd  USGS_09253000.shp  USGS_09253000.shx
site_09253000/Restart/: RESTART.2021030100_DOMAIN1
site_09253000/SNOTEL_obs/: owp_depth_2021-03-03T00:00:00Z.nc  owp_depth_2021-03-07T00:00:00Z.nc  owp_depth_2021-03-08T00:00:00Z.nc  owp_depth_2021-03-09T00:00:00Z.nc  owp_swe_2021-03-03T00:00:00Z.nc  owp_swe_2021-03-04T00:00:00Z.nc  owp_swe_2021-03-06T00:00:00Z.nc  owp_swe_2021-03-07T00:00:00Z.nc  owp_swe_2021-03-09T00:00:00Z.nc
site_09253000/geometry_file/.ipynb_checkpoints/: hydro_namelist_patches-checkpoint.json
site_09253000/json_files/: hrldas_namelists.json
site_09253000/json_files/.ipynb_checkpoints/: hydro_namelists-checkpoint.json
src/: CMakeLists.txt  Makefile  input_var_names.f90  jedi_disag_mod.f90  jedi_snow_incr.f90
src/cmake_scripts/: CMakeLists.txt  clean_cmake_testcase.sh  report.cmake  run_cmake_testcase.sh  run_workflow.cmake  setup_cmake_testcase.sh
src/jedi_increment/: CMakeLists.txt  jedi_disag_mod.f90  jedi_incr.f90  jedi_snow_incr.f90
src/jedi_workflowpy/: CMakeLists.txt  jedi_workflowpy.py  workflowFile.py
tests/: CMakeLists.txt  hello.f90  workflow1.py  workflow2.py
tests/jedi_increment/: CMakeLists.txt  RESTART.2017010100_DOMAIN1  RESTART.2017010100_DOMAIN1_SNEQV_plus100  RESTART.2017010100_DOMAIN1_SNOWH_plus0point1
tests/yamls/: jedi_work.yaml
workflowpy/: CMakeLists.txt  workflowpy.py
(+3 files in other folders)
