add_subdirectory(jedi_increment)
add_subdirectory(jedi_workflowpy)
# add_subdirectory(wrf_hydro_nwm_jedi)

# ecbuild_bundle_initialize()
# ecbuild_bundle( PROJECT wrf_hydro_nwm_jedi
#   GIT "git@github.com:JCSDA-internal/wrf_hydro_nwm_jedi.git"
#   SOURCE src/wrf_hydro_nwm_jedi
#   BRANCH develop UPDATE)
# ecbuild_bundle_finalize()
