add_executable(hello hello.f90)
add_test(NAME hello_world
  COMMAND hello)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/RESTART.2017010100_DOMAIN1
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1.test1
  COPYONLY)
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/RESTART.2017010100_DOMAIN1_SNOWH_plus0point1
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1_SNOWH_plus0point1
  COPYONLY)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/RESTART.2017010100_DOMAIN1
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1.test2
  COPYONLY)
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/RESTART.2017010100_DOMAIN1_SNEQV_plus100
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1_SNEQV_plus100
  COPYONLY)


add_test(NAME increment_SNOWH_test
  COMMAND jedi_snow_increment
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1.test1
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1_SNOWH_plus0point1)

add_test(NAME increment_SNEQV_test
  COMMAND jedi_snow_increment
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1.test2
  ${CMAKE_CURRENT_BINARY_DIR}/RESTART.2017010100_DOMAIN1_SNEQV_plus100)
